--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         #ol:hover {
             color: white;
         }
+        li::after {
+            content: "❄";
+        }
     </style>
     <body>
         <h1 id="h2" style="font-size: 50px;">input</h1>
