--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
         li::after {
             content: "❄";
         }
+
+        p::first-letter {
+            color: skyblue;
+            font-size: 30px;
+        }
+        #asd {
+            color: white;
+        }
+        
     </style>
     <body>
         <h1 id="h2" style="font-size: 50px;">input</h1>
@@ -55,5 +64,8 @@
             <li>Coffee</li>
             <li>Hot Chocolate</li>
         </ul>
+        <p id="asd">
+            My Name is Adib.
+        </p>
     </body>
 </html>
